MAT-218
Refactor of use of constants
Removal of the cli StringHelper
Removal of some constants