@@ -1,30 +1,11 @@
 package com.sentrysoftware.matrix.common.meta.monitor;
 
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION1;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION2;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION3;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.BANDWIDTH;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_ID;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.LOGICAL_ADDRESS;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.MODEL;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PHYSICAL_ADDRESS;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.REMOTE_PHYSICAL_ADDRESS;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.SERIAL_NUMBER;
-import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.VENDOR;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.BANDWIDTH_UTILIZATION_WARN_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.ERROR_PERCENT_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.ERROR_PERCENT_WARN_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.PRESENT_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_ALARM_CONDITION;
-import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_WARN_CONDITION;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 
-import com.sentrysoftware.matrix.common.helpers.HardwareConstants;
 import com.sentrysoftware.matrix.common.meta.parameter.MetaParameter;
 import com.sentrysoftware.matrix.common.meta.parameter.ParameterType;
 import com.sentrysoftware.matrix.connector.model.monitor.MonitorType;
@@ -39,112 +20,159 @@ import com.sentrysoftware.matrix.model.parameter.ParameterState;
 import com.sentrysoftware.matrix.model.parameter.PresentParam;
 import com.sentrysoftware.matrix.model.parameter.StatusParam;
 
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION1;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION2;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ADDITIONAL_INFORMATION3;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.BANDWIDTH;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.BANDWIDTH_UTILIZATION_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.BYTES_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.BYTES_RATE_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DEVICE_ID;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DUPLEX_MODE_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.DUPLEX_MODE_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ERROR_COUNT_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ERROR_PERCENT_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.FULL_DUPLEX_MODE;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.HALF_DUPLEX_MODE;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.LINK_SPEED_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.LINK_STATUS_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.LINK_STATUS_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.LOGICAL_ADDRESS;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.MODEL;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PACKETS_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PACKETS_RATE_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PERCENT_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PHYSICAL_ADDRESS;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PRESENT_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.RECEIVED_BYTES_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.RECEIVED_BYTES_RATE_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.RECEIVED_PACKETS_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.RECEIVED_PACKETS_RATE_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.REMOTE_PHYSICAL_ADDRESS;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.SERIAL_NUMBER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.SPEED_MBITS_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.STATUS_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.TRANSMITTED_BYTES_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.TRANSMITTED_BYTES_RATE_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.TRANSMITTED_PACKETS_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.TRANSMITTED_PACKETS_RATE_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.VENDOR;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ZERO_BUFFER_CREDIT_COUNT_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ZERO_BUFFER_CREDIT_COUNT_PARAMETER_UNIT;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ZERO_BUFFER_CREDIT_PERCENT_PARAMETER;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.BANDWIDTH_UTILIZATION_WARN_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.ERROR_PERCENT_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.ERROR_PERCENT_WARN_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.PRESENT_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_ALARM_CONDITION;
+import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.STATUS_WARN_CONDITION;
+
 public class NetworkCard implements IMetaMonitor {
 
 	private static final String CONSEQUENCE_FOR_BAD_NETWORK_CARD = "The network traffic (if any) that was processed by this adapter is no longer being handled, or is overloading another network adapter.";
 
 	public static final MetaParameter BANDWIDTH_UTILIZATION = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.BANDWIDTH_UTILIZATION_PARAMETER)
-			.unit(HardwareConstants.PERCENT_PARAMETER_UNIT)
+			.name(BANDWIDTH_UTILIZATION_PARAMETER)
+			.unit(PERCENT_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter DUPLEX_MODE = MetaParameter.builder()
 			.basicCollect(false)
-			.name(HardwareConstants.DUPLEX_MODE_PARAMETER)
-			.unit(HardwareConstants.DUPLEX_MODE_PARAMETER_UNIT)
+			.name(DUPLEX_MODE_PARAMETER)
+			.unit(DUPLEX_MODE_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter ERROR_PERCENT = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.ERROR_PERCENT_PARAMETER)
-			.unit(HardwareConstants.PERCENT_PARAMETER_UNIT)
+			.name(ERROR_PERCENT_PARAMETER)
+			.unit(PERCENT_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter LINK_SPEED = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.LINK_SPEED_PARAMETER)
-			.unit(HardwareConstants.SPEED_MBITS_PARAMETER_UNIT)
+			.name(LINK_SPEED_PARAMETER)
+			.unit(SPEED_MBITS_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter LINK_STATUS = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.LINK_STATUS_PARAMETER)
-			.unit(HardwareConstants.LINK_STATUS_PARAMETER_UNIT)
+			.name(LINK_STATUS_PARAMETER)
+			.unit(LINK_STATUS_PARAMETER_UNIT)
 			.type(ParameterType.STATUS)
 			.build();
 
 	public static final MetaParameter RECEIVED_BYTES_RATE = MetaParameter.builder()
 			.basicCollect(false)
-			.name(HardwareConstants.RECEIVED_BYTES_RATE_PARAMETER)
-			.unit(HardwareConstants.BYTES_RATE_PARAMETER_UNIT)
+			.name(RECEIVED_BYTES_RATE_PARAMETER)
+			.unit(BYTES_RATE_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter RECEIVED_PACKETS_RATE = MetaParameter.builder()
 			.basicCollect(false)
-			.name(HardwareConstants.RECEIVED_PACKETS_RATE_PARAMETER)
-			.unit(HardwareConstants.PACKETS_RATE_PARAMETER_UNIT)
+			.name(RECEIVED_PACKETS_RATE_PARAMETER)
+			.unit(PACKETS_RATE_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter TRANSMITTED_BYTES_RATE = MetaParameter.builder()
 			.basicCollect(false)
-			.name(HardwareConstants.TRANSMITTED_BYTES_RATE_PARAMETER)
-			.unit(HardwareConstants.BYTES_RATE_PARAMETER_UNIT)
+			.name(TRANSMITTED_BYTES_RATE_PARAMETER)
+			.unit(BYTES_RATE_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter TRANSMITTED_PACKETS_RATE = MetaParameter.builder()
 			.basicCollect(false)
-			.name(HardwareConstants.TRANSMITTED_PACKETS_RATE_PARAMETER)
-			.unit(HardwareConstants.PACKETS_RATE_PARAMETER_UNIT)
+			.name(TRANSMITTED_PACKETS_RATE_PARAMETER)
+			.unit(PACKETS_RATE_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter ZERO_BUFFER_CREDIT_PERCENT = MetaParameter.builder()
 			.basicCollect(false)
-			.name(HardwareConstants.ZERO_BUFFER_CREDIT_PERCENT_PARAMETER)
-			.unit(HardwareConstants.PERCENT_PARAMETER_UNIT)
+			.name(ZERO_BUFFER_CREDIT_PERCENT_PARAMETER)
+			.unit(PERCENT_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter ZERO_BUFFER_CREDIT_COUNT = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.ZERO_BUFFER_CREDIT_COUNT_PARAMETER)
-			.unit(HardwareConstants.ZERO_BUFFER_CREDIT_COUNT_PARAMETER_UNIT)
+			.name(ZERO_BUFFER_CREDIT_COUNT_PARAMETER)
+			.unit(ZERO_BUFFER_CREDIT_COUNT_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter TRANSMITTED_BYTES = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.TRANSMITTED_BYTES_PARAMETER)
-			.unit(HardwareConstants.BYTES_PARAMETER_UNIT)
+			.name(TRANSMITTED_BYTES_PARAMETER)
+			.unit(BYTES_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter RECEIVED_BYTES = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.RECEIVED_BYTES_PARAMETER)
-			.unit(HardwareConstants.BYTES_PARAMETER_UNIT)
+			.name(RECEIVED_BYTES_PARAMETER)
+			.unit(BYTES_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter TRANSMITTED_PACKETS = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.TRANSMITTED_PACKETS_PARAMETER)
-			.unit(HardwareConstants.PACKETS_PARAMETER_UNIT)
+			.name(TRANSMITTED_PACKETS_PARAMETER)
+			.unit(PACKETS_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
 	public static final MetaParameter RECEIVED_PACKETS = MetaParameter.builder()
 			.basicCollect(true)
-			.name(HardwareConstants.RECEIVED_PACKETS_PARAMETER)
-			.unit(HardwareConstants.PACKETS_PARAMETER_UNIT)
+			.name(RECEIVED_PACKETS_PARAMETER)
+			.unit(PACKETS_PARAMETER_UNIT)
 			.type(ParameterType.NUMBER)
 			.build();
 
@@ -179,34 +207,34 @@ public class NetworkCard implements IMetaMonitor {
 	static {
 		final Map<String, MetaParameter> map = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-		map.put(HardwareConstants.STATUS_PARAMETER, STATUS);
-		map.put(HardwareConstants.PRESENT_PARAMETER, PRESENT);
-		map.put(HardwareConstants.BANDWIDTH_UTILIZATION_PARAMETER, BANDWIDTH_UTILIZATION);
-		map.put(HardwareConstants.DUPLEX_MODE_PARAMETER, DUPLEX_MODE);
-		map.put(HardwareConstants.ERROR_PERCENT_PARAMETER, ERROR_PERCENT);
-		map.put(HardwareConstants.LINK_SPEED_PARAMETER, LINK_SPEED);
-		map.put(HardwareConstants.LINK_STATUS_PARAMETER, LINK_STATUS);
-		map.put(HardwareConstants.RECEIVED_BYTES_RATE_PARAMETER, RECEIVED_BYTES_RATE);
-		map.put(HardwareConstants.RECEIVED_PACKETS_RATE_PARAMETER, RECEIVED_PACKETS_RATE);
-		map.put(HardwareConstants.TRANSMITTED_BYTES_RATE_PARAMETER, TRANSMITTED_BYTES_RATE);
-		map.put(HardwareConstants.TRANSMITTED_PACKETS_RATE_PARAMETER, TRANSMITTED_PACKETS_RATE);
-		map.put(HardwareConstants.ZERO_BUFFER_CREDIT_PERCENT_PARAMETER, ZERO_BUFFER_CREDIT_PERCENT);
-		map.put(HardwareConstants.ZERO_BUFFER_CREDIT_COUNT_PARAMETER, ZERO_BUFFER_CREDIT_COUNT);
-		map.put(HardwareConstants.TRANSMITTED_BYTES_PARAMETER, TRANSMITTED_BYTES);
-		map.put(HardwareConstants.RECEIVED_BYTES_PARAMETER, RECEIVED_BYTES);
-		map.put(HardwareConstants.TRANSMITTED_PACKETS_PARAMETER, TRANSMITTED_PACKETS);
-		map.put(HardwareConstants.RECEIVED_PACKETS_PARAMETER, RECEIVED_PACKETS);
-		map.put(HardwareConstants.ERROR_COUNT_PARAMETER, ERROR_COUNT);
+		map.put(STATUS_PARAMETER, STATUS);
+		map.put(PRESENT_PARAMETER, PRESENT);
+		map.put(BANDWIDTH_UTILIZATION_PARAMETER, BANDWIDTH_UTILIZATION);
+		map.put(DUPLEX_MODE_PARAMETER, DUPLEX_MODE);
+		map.put(ERROR_PERCENT_PARAMETER, ERROR_PERCENT);
+		map.put(LINK_SPEED_PARAMETER, LINK_SPEED);
+		map.put(LINK_STATUS_PARAMETER, LINK_STATUS);
+		map.put(RECEIVED_BYTES_RATE_PARAMETER, RECEIVED_BYTES_RATE);
+		map.put(RECEIVED_PACKETS_RATE_PARAMETER, RECEIVED_PACKETS_RATE);
+		map.put(TRANSMITTED_BYTES_RATE_PARAMETER, TRANSMITTED_BYTES_RATE);
+		map.put(TRANSMITTED_PACKETS_RATE_PARAMETER, TRANSMITTED_PACKETS_RATE);
+		map.put(ZERO_BUFFER_CREDIT_PERCENT_PARAMETER, ZERO_BUFFER_CREDIT_PERCENT);
+		map.put(ZERO_BUFFER_CREDIT_COUNT_PARAMETER, ZERO_BUFFER_CREDIT_COUNT);
+		map.put(TRANSMITTED_BYTES_PARAMETER, TRANSMITTED_BYTES);
+		map.put(RECEIVED_BYTES_PARAMETER, RECEIVED_BYTES);
+		map.put(TRANSMITTED_PACKETS_PARAMETER, TRANSMITTED_PACKETS);
+		map.put(RECEIVED_PACKETS_PARAMETER, RECEIVED_PACKETS);
+		map.put(ERROR_COUNT_PARAMETER, ERROR_COUNT);
 
 		META_PARAMETERS = Collections.unmodifiableMap(map);
 
 		final Map<String, List<AlertRule>> alertRulesMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
-		alertRulesMap.put(HardwareConstants.PRESENT_PARAMETER, Collections.singletonList(PRESENT_ALERT_RULE));
-		alertRulesMap.put(HardwareConstants.STATUS_PARAMETER, List.of(STATUS_WARN_ALERT_RULE, STATUS_ALARM_ALERT_RULE));
-		alertRulesMap.put(HardwareConstants.LINK_STATUS_PARAMETER, Collections.singletonList(LINK_STATUS_ALERT_RULE));
-		alertRulesMap.put(HardwareConstants.ERROR_PERCENT_PARAMETER, List.of(ERROR_PERCENT_WARN_ALART_RULE, ERROR_PERCENT_ALARM_ALERT_RULE));
-		alertRulesMap.put(HardwareConstants.BANDWIDTH_UTILIZATION_PARAMETER, Collections.singletonList(BANDWIDTH_UTILIZATION_HIGH_ALERT_RULE));
+		alertRulesMap.put(PRESENT_PARAMETER, Collections.singletonList(PRESENT_ALERT_RULE));
+		alertRulesMap.put(STATUS_PARAMETER, List.of(STATUS_WARN_ALERT_RULE, STATUS_ALARM_ALERT_RULE));
+		alertRulesMap.put(LINK_STATUS_PARAMETER, Collections.singletonList(LINK_STATUS_ALERT_RULE));
+		alertRulesMap.put(ERROR_PERCENT_PARAMETER, List.of(ERROR_PERCENT_WARN_ALART_RULE, ERROR_PERCENT_ALARM_ALERT_RULE));
+		alertRulesMap.put(BANDWIDTH_UTILIZATION_PARAMETER, Collections.singletonList(BANDWIDTH_UTILIZATION_HIGH_ALERT_RULE));
 
 		ALERT_RULES = Collections.unmodifiableMap(alertRulesMap); 
 	}
@@ -240,23 +268,23 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkHighBandwidthUtilizationCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedBandwidthUtilization = monitor.assertNumberParameter(HardwareConstants.BANDWIDTH_UTILIZATION_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedBandwidthUtilization = monitor.assertNumberParameter(BANDWIDTH_UTILIZATION_PARAMETER, conditions);
 
 		if (assertedBandwidthUtilization.isAbnormal()) {
 
-			final NumberParam duplexModeParameter = monitor.getParameter(HardwareConstants.DUPLEX_MODE_PARAMETER, NumberParam.class);
+			final NumberParam duplexModeParameter = monitor.getParameter(DUPLEX_MODE_PARAMETER, NumberParam.class);
 			final Double duplexModeValue = duplexModeParameter != null ? duplexModeParameter.getValue() : null;
 			String duplexMode = null;
 			if (duplexModeValue != null) {
-				duplexMode = duplexModeValue == 1 ? HardwareConstants.FULL_DUPLEX_MODE : HardwareConstants.HALF_DUPLEX_MODE;
+				duplexMode = duplexModeValue == 1 ? FULL_DUPLEX_MODE : HALF_DUPLEX_MODE;
 			}
 
-			final NumberParam speedParameter = monitor.getParameter(HardwareConstants.LINK_SPEED_PARAMETER, NumberParam.class);
+			final NumberParam speedParameter = monitor.getParameter(LINK_SPEED_PARAMETER, NumberParam.class);
 			final Double speed = speedParameter != null ? speedParameter.getValue() : null;
 
 			return AlertDetails.builder()
 					.problem(String.format("The network adapter is using (%f %s) of its bandwidth.",
-							assertedBandwidthUtilization.getParameter().getValue(), HardwareConstants.PERCENT_PARAMETER_UNIT))
+							assertedBandwidthUtilization.getParameter().getValue(), PERCENT_PARAMETER_UNIT))
 					.consequence("High network usage can increase response times at an unacceptable level and sometimes lead to file transfer failures.")
 					.recommendedAction("Check on the operating system what is generating such a high network traffic. If network traffic level is normal (in bytes/sec), check the link speed and duplex mode of the card"
 							+ (speed != null && duplexMode != null ? String.format(" currently reported as running at (%f) in (%s) duplex mode", speed, duplexMode) : ""))
@@ -274,7 +302,7 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkLowBandwidthUtilizationCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedBandwidthUtilization = monitor.assertNumberParameter(HardwareConstants.BANDWIDTH_UTILIZATION_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedBandwidthUtilization = monitor.assertNumberParameter(BANDWIDTH_UTILIZATION_PARAMETER, conditions);
 		if (assertedBandwidthUtilization.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -295,7 +323,7 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkZeroBufferCreditCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedZeroBufferCreditPercent = monitor.assertNumberParameter(HardwareConstants.ZERO_BUFFER_CREDIT_PERCENT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedZeroBufferCreditPercent = monitor.assertNumberParameter(ZERO_BUFFER_CREDIT_PERCENT_PARAMETER, conditions);
 
 		if (assertedZeroBufferCreditPercent.isAbnormal()) {
 
@@ -317,12 +345,12 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkErrorPercentWarnCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedErrorPercent = monitor.assertNumberParameter(HardwareConstants.ERROR_PERCENT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedErrorPercent = monitor.assertNumberParameter(ERROR_PERCENT_PARAMETER, conditions);
 		if (assertedErrorPercent.isAbnormal()) {
 
 			return AlertDetails.builder()
 					.problem(String.format("This network card is encountering or generating a high number of errors (%f %s).",
-							assertedErrorPercent.getParameter().getValue(), HardwareConstants.PERCENT_PARAMETER_UNIT))
+							assertedErrorPercent.getParameter().getValue(), PERCENT_PARAMETER_UNIT))
 					.consequence("This strongly impacts the network performance.")
 					.recommendedAction("Check the network cable, the driver settings, the speed and duplex mode of the link. If everything seems normal, you may have to replace this network adapter.")
 					.build();
@@ -339,12 +367,12 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkErrorPercentAlarmCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedErrorPercent = monitor.assertNumberParameter(HardwareConstants.ERROR_PERCENT_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedErrorPercent = monitor.assertNumberParameter(ERROR_PERCENT_PARAMETER, conditions);
 		if (assertedErrorPercent.isAbnormal()) {
 
 			return AlertDetails.builder()
 					.problem(String.format("This network card is encountering or generating a critically high number of errors (%f %s).",
-							assertedErrorPercent.getParameter().getValue(), HardwareConstants.PERCENT_PARAMETER_UNIT))
+							assertedErrorPercent.getParameter().getValue(), PERCENT_PARAMETER_UNIT))
 					.consequence("This strongly impacts the network performance.")
 					.recommendedAction("Check the network cable, the driver settings, the speed and duplex mode of the link. If everything seems normal, you may have to replace this network adapter.")
 					.build();
@@ -361,7 +389,7 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkStatusWarnCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(HardwareConstants.STATUS_PARAMETER, conditions);
+		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(STATUS_PARAMETER, conditions);
 		if (assertedStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -382,7 +410,7 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkStatusAlarmCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(HardwareConstants.STATUS_PARAMETER, conditions);
+		final AssertedParameter<StatusParam> assertedStatus = monitor.assertStatusParameter(STATUS_PARAMETER, conditions);
 		if (assertedStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -403,7 +431,7 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkLinkStatusCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		AssertedParameter<StatusParam> assertedlinkStatus = monitor.assertStatusParameter(HardwareConstants.LINK_STATUS_PARAMETER, conditions);
+		AssertedParameter<StatusParam> assertedlinkStatus = monitor.assertStatusParameter(LINK_STATUS_PARAMETER, conditions);
 		if (assertedlinkStatus.isAbnormal()) {
 
 			return AlertDetails.builder()
@@ -424,12 +452,12 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkLinkSpeedCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		AssertedParameter<NumberParam> assertedLinkSpeed = monitor.assertNumberParameter(HardwareConstants.LINK_SPEED_PARAMETER, conditions);
+		AssertedParameter<NumberParam> assertedLinkSpeed = monitor.assertNumberParameter(LINK_SPEED_PARAMETER, conditions);
 		if (assertedLinkSpeed.isAbnormal()) {
 
 			return AlertDetails.builder()
 					.problem(String.format("The network link is operating at an improper speed (%f %s).",
-							assertedLinkSpeed.getParameter().getValue(), HardwareConstants.SPEED_MBITS_PARAMETER_UNIT))
+							assertedLinkSpeed.getParameter().getValue(), SPEED_MBITS_PARAMETER_UNIT))
 					.consequence("If the network link has negotiated too low, it may not be able to carry all of the traffic, leading to delayed response times for the applications relying on it. On the opposite, if negotiated too high, it can (rarely though) generate a unacceptable amount of errors, leading to response time delays and even data corruption.")
 					.recommendedAction("A badly negotiated link speed may be caused by a problem with the cable (defective, poor quality). It can also be caused by bugs in the firmware of the network cards themselves. If configured to automatically negotiate the link speed (as it is often the case), try configuring the adapter with a fixed speed.")
 					.build();
@@ -446,7 +474,7 @@ public class NetworkCard implements IMetaMonitor {
 	 * @return {@link AlertDetails} if the abnormality is detected otherwise null
 	 */
 	public static AlertDetails checkDuplexModeCondition(Monitor monitor, Set<AlertCondition> conditions) {
-		final AssertedParameter<NumberParam> assertedDuplexMode = monitor.assertNumberParameter(HardwareConstants.DUPLEX_MODE_PARAMETER, conditions);
+		final AssertedParameter<NumberParam> assertedDuplexMode = monitor.assertNumberParameter(DUPLEX_MODE_PARAMETER, conditions);
 		if (assertedDuplexMode.isAbnormal()) {
 
 			return AlertDetails.builder()
